# lib/units/api/controllers/autotests.js
@@ -10,8 +10,41 @@ import * as Sentry from '@sentry/node'
 import _ from 'lodash'
 import useDevice, {UseDeviceError} from '../helpers/useDevice.js'
 import {InstallResultMessage} from '../../../wire/wire.js'
+import BuildModel from '../../../db/models/build/index.js'
 
 const log = logger.createLogger('api:controllers:autotests')
+
+// Snapshot the devices of an autotests group into its build record so the
+// run history stays intact even after the group itself is deleted.
+function syncBuildDevices(buildId) {
+    return dbapi.getGroup(buildId)
+        .then(function(group) {
+            if (!group) {
+                // Group was rolled back (quota/conflict/not enough devices)
+                return BuildModel.updateBuild(buildId, {
+                    state: 'failed',
+                    releasedAt: new Date()
+                })
+            }
+            return dbapi.loadDevicesBySerials(group.devices || []).then(function(devices) {
+                return BuildModel.updateBuild(buildId, {
+                    devices: (devices || []).map(function(device) {
+                        return {
+                            serial: device.serial,
+                            model: device.model || null,
+                            marketName: device.marketName || null,
+                            version: device.version || null,
+                            manufacturer: device.manufacturer || null,
+                            ios: !!device.ios
+                        }
+                    })
+                })
+            })
+        })
+        .catch(function(err) {
+            log.error('Failed to sync build devices: %s', err?.message || err)
+        })
+}
 
 function captureDevices(req, res) {
     const amount = req.query.amount
@@ -62,7 +95,24 @@ function captureDevices(req, res) {
                     user: req.user,
                 }
                 return dbapi.addAdminsToGroup(group.id).then(() => {
+                    return BuildModel.createBuild({
+                        id: group.id,
+                        name: runId,
+                        runUrl: runUrl || null,
+                        owner: {
+                            email: email,
+                            name: username
+                        },
+                        state: 'running',
+                        started: start,
+                        plannedStop: stop,
+                        releasedAt: null,
+                        devices: []
+                    })
+                }).then(() => {
                     return groups.addGroupDevices(deviceReq, res)
+                }).then((result) => {
+                    return syncBuildDevices(group.id).then(() => result)
                 })
             }
             else {
@@ -101,7 +151,9 @@ function addDevices(req, res) {
         },
         user: req.user,
     }
-    return groups.addGroupDevices(deviceReq, res)
+    return Promise.resolve(groups.addGroupDevices(deviceReq, res)).then((result) => {
+        return syncBuildDevices(groupId).then(() => result)
+    })
 }
 
 function freeDevices(req, res) {
@@ -116,7 +168,37 @@ function freeDevices(req, res) {
         },
         options: req.options
     }
-    groups.deleteGroups(request, res)
+    const ids = _.without((groupId || '').split(','), '')
+    Promise.all(ids.map(function(id) {
+        return dbapi.getGroup(id)
+            .then(function(group) {
+                const patch = {
+                    state: 'finished',
+                    releasedAt: new Date()
+                }
+                if (group?.devices?.length) {
+                    return dbapi.loadDevicesBySerials(group.devices).then(function(devices) {
+                        patch.devices = (devices || []).map(function(device) {
+                            return {
+                                serial: device.serial,
+                                model: device.model || null,
+                                marketName: device.marketName || null,
+                                version: device.version || null,
+                                manufacturer: device.manufacturer || null,
+                                ios: !!device.ios
+                            }
+                        })
+                        return BuildModel.updateBuild(id, patch)
+                    })
+                }
+                return BuildModel.updateBuild(id, patch)
+            })
+            .catch(function(err) {
+                log.error('Failed to finalize build %s: %s', id, err?.message || err)
+            })
+    })).finally(function() {
+        groups.deleteGroups(request, res)
+    })
 }
 
 function installOnDevice(req, res) {
