# lib/units/api/paths/builds/{id}.js
@@ -1,0 +1,7 @@
+// builds
+
+import {deleteBuild} from '../../controllers/builds.js'
+
+export function del(req, res) {
+    return deleteBuild(req, res)
+}
